# Poonam

./: .gitignore  .gitmodules  README.md
hardware/PCBs/PolarPowerBoard/: PolarPowerBoard.kicad_prl  PolarPowerBoard.kicad_pro  PolarPowerBoard.kicad_sch
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/camera_driver/include/camera_driver/: camera_driver_parameters.hpp
ros2_ws/install/camera_driver/lib/camera_driver/: camera_driver_node
ros2_ws/install/camera_driver/share/camera_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/camera_driver_srvs/share/camera_driver_srvs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/carbot_hardware/share/carbot_hardware/: carbot_hardware.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/depthai_driver/share/depthai_driver/: local_setup.bash  (+9 more)
ros2_ws/log/: latest_build
ros2_ws/src/camera_driver/: how_to_camera.txt
ros2_ws/src/camera_driver/config/: camera_driver_config.yaml
ros2_ws/src/camera_driver/launch/: camera_driver.launch.py
ros2_ws/src/camera_driver/src/: Main.cpp
ros2_ws/src/carbot_hardware/hardware/: diffbot_system.cpp
ros2_ws/src/carbot_hardware/test/: test_view_robot_launch.py
ros2_ws/src/depthai_driver/config/: everything.yaml
ros2_ws/src/depthai_driver/launch/: camera_driver.launch.py
ros2_ws/src/microros_hardware_interface/: CMakeLists.txt  README.md  microros_hardware_interface.xml  package.xml
ros2_ws/src/microros_hardware_interface/bringup/config/: controllers.yaml  mapper_params_online_async.yaml
ros2_ws/src/microros_hardware_interface/bringup/launch/: controller_manager.launch.py  external_controllers.launch.py  foxglove.launch.py  joint_state_broadcaster.launch.py  main.launch.py  robot_state_publisher.launch.py  sim.launch.py
ros2_ws/src/microros_hardware_interface/bringup/scripts/: launch_microros.sh
ros2_ws/src/microros_hardware_interface/bringup/worlds/: boxed_world.world  obstacles.world  tugbot_depot.world
ros2_ws/src/microros_hardware_interface/description/launch/: view_robot.launch.py
ros2_ws/src/microros_hardware_interface/description/ros2_control/: microros_hardware.ros2_control.xacro
ros2_ws/src/microros_hardware_interface/description/rviz/: view.rviz
ros2_ws/src/microros_hardware_interface/description/urdf/: core.urdf.xacro  robot.urdf.xacro
ros2_ws/src/microros_hardware_interface/description/urdf/assets/chassis/: Chassis.dae  Chassis.mtl  Chassis.stl
ros2_ws/src/microros_hardware_interface/description/urdf/assets/wheel/: Wheel.dae  Wheel.mtl  Wheel.stl
ros2_ws/src/microros_hardware_interface/description/urdf/macros/: depth_camera.xacro  oakd.xacro
ros2_ws/src/microros_hardware_interface/description/urdf/util/: constants.xacro
ros2_ws/src/microros_hardware_interface/description/urdf/util/components/: driver_camera.xacro
ros2_ws/src/microros_hardware_interface/description/urdf/util/macros/: camera.xacro  dead_wheel.xacro  imu.xacro  lidar.xacro  wheel.xacro
ros2_ws/src/microros_hardware_interface/doc/: userdoc.rst
ros2_ws/src/microros_hardware_interface/hardware/include/microros_hardware_interface/: visibility_control.h
ros2_ws/src/microros_hardware_interface/hardware/include/microros_hardware_interface/interfaces/: motor_interface.hpp
ros2_ws/src/microros_hardware_interface/hardware/include/microros_hardware_interface/util/: timestamped_value.hpp  utility.hpp
ros2_ws/src/microros_hardware_interface/test/: test_urdf_xacro.py  test_view_robot_launch.py
ros2_ws/src/my_robot/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot/config/: effort_translator.yaml  joystick.yaml
ros2_ws/src/my_robot/launch/: gazebo_translator.launch.py  main.launch.py  microros.launch.py  simulation.launch.py  twist_mux.launch.py
ros2_ws/src/my_robot/src/util/: HardwareTranslator.cpp
ros2_ws/src/template_package/description/: ros2_control.xacro
ros2_ws/src/template_package/launch/: basic_rsp.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py
software/ros2_ws/: my_map.data  my_map.pgm  my_map.yaml  notes.md
software/ros2_ws/src/camera_driver/: CMakeLists.txt
software/ros2_ws/src/camera_driver/config/: camera_seven_calibration.yaml
software/ros2_ws/src/camera_driver/include/camera_driver/cameramanager/: CameraManager.hpp
software/ros2_ws/src/camera_driver/launch/: image_proc.launch.py
software/ros2_ws/src/camera_driver/src/: parameters.yaml
software/ros2_ws/src/camera_driver_srvs/: CMakeLists.txt  package.xml
software/ros2_ws/src/carbot_hardware/: CMakeLists.txt  README.md  carbot_hardware.xml  package.xml
software/ros2_ws/src/carbot_hardware/bringup/launch/: robot_state_publisher.launch.py
software/ros2_ws/src/carbot_hardware/description/launch/: view_robot.launch.py
software/ros2_ws/src/carbot_hardware/description/rviz/: view.rviz
software/ros2_ws/src/carbot_hardware/description/urdf/components/: camera.xacro
software/ros2_ws/src/carbot_hardware/description/urdf/util/: carlikebot.materials.xacro  constants.xacro
software/ros2_ws/src/carbot_hardware/doc/: userdoc.rst
software/ros2_ws/src/carbot_hardware/hardware/include/carbot_hardware/: arduino_comms.hpp  arduino_interface_types.hpp  constants.hpp  diffbot_system.hpp  visibility_control.h
software/ros2_ws/src/carbot_hardware/hardware/include/carbot_hardware/devices/: Device.hpp  Motor.hpp  Sensor.hpp
software/ros2_ws/src/carbot_hardware/hardware/include/carbot_hardware/subsystems/: Drive.hpp  Subsystem.hpp  SystemManager.hpp
software/ros2_ws/src/carbot_hardware/test/: test_urdf_xacro.py
software/ros2_ws/src/depthai_driver/: CMakeLists.txt  package.xml
software/ros2_ws/src/microros_hardware_interface/: CMakeLists.txt  testing.txt
software/ros2_ws/src/template_package/: CMakeLists.txt  package.xml
(+433 files in other folders)
